<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>epuck_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 driver for e-puck</description>
  <maintainer email="support@cyberbotics.com">Cyberbotics</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <exec_depend>epuck_ros2_driver</exec_depend>
  <exec_depend>epuck_ros2_camera</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
